anoneko-adopt-api/kube/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: anoneko-adopt-api
  labels:
    app: anoneko-adopt-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: anoneko-adopt-api
  template:
    metadata:
      labels:
        app: anoneko-adopt-api
    spec:
      containers:
        - name: anoneko-adopt-api
          image: sudiptob2/anoneko-adopt:develop
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
