anoneko-adopt-api/kube/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: anoneko-adopt-api
spec:
  selector:
    app: anoneko-adopt-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
